Added logo icons and resume.html

--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,11 @@
+<!--Andrew Armas. WEB 210 - Module 3-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Add a relevant page title</title>
+    <title>Andrew J. Armas | Resume</title>
   </head>
   <body>
     <!-- //  INTRO  // -->
