--- a/index.html
+++ b/index.html
@@ -1,33 +1,49 @@
+<!--Andrew Armas. WEB 210 - Module 3-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add a relevant page title</title>
+    <title> Andrew J. Armas | Portfolio </title>
   </head>
   <body>
     <main>
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <header>
-        <h1>Your Name</h1>
-        <h2>Job title or tagline</h2>
+        <h1>Andrew J. Armas</h1>
+        <h2>Freelance Graphic Designer & Illustrator</h2>
 
-        <p>Add your profile copy here. Add more paragraphs or links as needed. Here is some dummy text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur, risus neque scelerisque erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet hendrerit ante.</p>
-        <p>Add another paragraph if needed.</p>
+        <p>Hi there, my name is Andrew J. Armas. I’m currently in my last year at Wake Technical Community College to complete my Associates in Graphic Design and Advertising. My goal is to become a freelance graphic designer with work that embraces a sense of drama, purpose, and an innate understanding of the impact visuals can have on an audience. I aim to provide professional services (branding, logo design & packaging design, website design, artwork, and illustrations) to small businesses, entrepreneurs, and other clients who need a fresh perspective, ensuring that each creation resonates authentically with their intended audience..</p>
       </header>
 
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
       <section>
         <h2>Featured Projects</h2>
-        <p>View selected projects below. More information can be found at <a href="http://christinatruong.com">christinatruong.com</a>.</p>
+        <p>View selected projects below. More information can be found at <a href="https://www.aarmasdesign.com">aarmasdesign.com</a>.</p>
 
         <!-- Copy the whole <section> block to add more projects. -->
         <section>
-          <h3>Project Name</h3>
+          <h3>Second Life Thrift Store</h3>
           <img src="project-thumbnail.png" alt="description of image">
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
           <a href="#" target="_blank">View project / case study</a>
         </section>
+
+        <section>
+          <h3>Think Big Conference</h3>
+          <img src="project-thumbnail.png" alt="description of image">
+          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+          <a href="#" target="_blank">View project / case study</a>
+        </section>
+
+        <section>
+          <h3>Apotherie Spa</h3>
+          <img src="project-thumbnail.png" alt="description of image">
+          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+          <a href="#" target="_blank">View project / case study</a>
+        </section>
+
         <!-- End of Project block. -->
       </section>
 
@@ -59,8 +75,20 @@
 
         <!-- Copy this whole <section> block to add more schools. -->
         <section>
-          <h3>School name - City</h3>
-          <p>Designation received or program name, year attended</p>
+          <h3>Wake Technical Community College - Raleigh, NC</h3>
+          <p>AAS in Graphic Design & Advertising, 2019-2025</p>
+          <p>Summary or accomplishments.</p>
+        </section>
+
+        <section>
+          <h3>Southern Illinois University - Carbondale, IL</h3>
+          <p>MFA in Theater; Technical Direction, 2015-2018</p>
+          <p>Summary or accomplishments.</p>
+        </section>
+
+        <section>
+          <h3>Florida Atlantic University - Boca Raton, FL</h3>
+          <p>BA in Theater Design & Technology, 2011-2015</p>
           <p>Summary or accomplishments.</p>
         </section>
         <!-- End of School block. -->
