Images updated and CSS file added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Andrew J. Armas | Portfolio </title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <main>
@@ -25,21 +26,21 @@
         <!-- Copy the whole <section> block to add more projects. -->
         <section>
           <h3>Second Life Thrift Store</h3>
-          <img src="project-thumbnail.png" alt="description of image">
+          <img src="images/thumbnail-3.jpg" alt="Thumbnail of Second Life Thrift Store branding">
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
           <a href="#" target="_blank">View project / case study</a>
         </section>
 
         <section>
           <h3>Think Big Conference</h3>
-          <img src="project-thumbnail.png" alt="description of image">
+          <img src="images/ThinkBigCon-Thumbnail-500px.png" srcset="images/ThinkBigCon-Thumbnail-1000px.png 2x" alt="Thumbnail of Think Big Conference branding">
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
           <a href="#" target="_blank">View project / case study</a>
         </section>
 
         <section>
           <h3>Apotherie Spa</h3>
-          <img src="project-thumbnail.png" alt="description of image">
+          <img src="images/annie-spratt-unsplash.jpg" alt="Thumbnail of Apotherie Spa branding">
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
           <a href="#" target="_blank">View project / case study</a>
         </section>
@@ -101,9 +102,9 @@
         <!-- Social media and contact links. Add or remove any networks. -->
         <ul>
           <li><a href="mailto:email@example.com">email@example.com</a></li>
-          <li><a href="http://yourwebsite.com" target="_blank">yourwebsite.com</a></li>
-          <li><a href="#" target="_blank">Twitter</a></li>
-          <li><a href="#" target="_blank">LinkedIn</a></li>
+          <li><a href="https://www.aarmasdesign.com" target="_blank">aarmasdesign.com</a></li>
+          <li><a href="https://x.com/AndrewJArmas" target="_blank"><img src="images/logo-black-X.png" alt="My X channel"></a></li>
+          <li><a href="https://www.linkedin.com/in/andrew-armas-670b5a212/" target="_blank"><img src="images/icon-logo-linkedin.png" alt="My LinkedIn page"></a></li>
           <li><a href="#" target="_blank">Facebook</a></li>
         </ul>
       </footer>
