Finished Ch2. Image & Style changes

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     <title> Andrew J. Armas | Portfolio </title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body>
+  
+  <body class="home">
     <main>
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
-      <header>
-        <h1>Andrew J. Armas</h1>
-        <h2>Freelance Graphic Designer & Illustrator</h2>
+       <div class="content-wrapper">
+          <header>
+            <h1>Andrew J. Armas</h1>
+            <h2>Freelance Graphic Designer & Illustrator</h2>
 
-        <p>Hi there, my name is Andrew J. Armas. I’m currently in my last year at Wake Technical Community College to complete my Associates in Graphic Design and Advertising. My goal is to become a freelance graphic designer with work that embraces a sense of drama, purpose, and an innate understanding of the impact visuals can have on an audience. I aim to provide professional services (branding, logo design & packaging design, website design, artwork, and illustrations) to small businesses, entrepreneurs, and other clients who need a fresh perspective, ensuring that each creation resonates authentically with their intended audience..</p>
-      </header>
+            <p>Hi there, my name is Andrew J. Armas. I’m currently in my last year at Wake Technical Community College to complete my Associates in Graphic Design and Advertising. My goal is to become a freelance graphic designer with work that embraces a sense of drama, purpose, and an innate understanding of the impact visuals can have on an audience. I aim to provide professional services (branding, logo design & packaging design, website design, artwork, and illustrations) to small businesses, entrepreneurs, and other clients who need a fresh perspective, ensuring that each creation resonates authentically with their intended audience.</p>
+          </header>
+       </div>
 
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
       <section>
@@ -28,21 +31,21 @@
           <h3>Second Life Thrift Store</h3>
           <img src="images/thumbnail-3.jpg" alt="Thumbnail of Second Life Thrift Store branding">
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a href="#" target="_blank">View project / case study</a>
+          <a class="btn" href="#" target="_blank">View project / case study</a>
         </section>
 
         <section>
           <h3>Think Big Conference</h3>
           <img src="images/ThinkBigCon-Thumbnail-500px.png" srcset="images/ThinkBigCon-Thumbnail-1000px.png 2x" alt="Thumbnail of Think Big Conference branding">
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a href="#" target="_blank">View project / case study</a>
+          <a class="btn" href="#" target="_blank">View project / case study</a>
         </section>
 
         <section>
           <h3>Apotherie Spa</h3>
           <img src="images/annie-spratt-unsplash.jpg" alt="Thumbnail of Apotherie Spa branding">
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a href="#" target="_blank">View project / case study</a>
+          <a class="btn" href="#" target="_blank">View project / case study</a>
         </section>
 
         <!-- End of Project block. -->
@@ -101,11 +104,11 @@
 
         <!-- Social media and contact links. Add or remove any networks. -->
         <ul>
-          <li><a href="mailto:email@example.com">email@example.com</a></li>
+          <li><a href="mailto:email@example.com">andrewjarmas@gmail.com</a></li>
           <li><a href="https://www.aarmasdesign.com" target="_blank">aarmasdesign.com</a></li>
-          <li><a href="https://x.com/AndrewJArmas" target="_blank"><img src="images/logo-black-X.png" alt="My X channel"></a></li>
+          <li><a href="https://x.com/AndrewJArmas" target="_blank"><img src="images/icon-logo-x.png" alt="My X channel"></a></li>
           <li><a href="https://www.linkedin.com/in/andrew-armas-670b5a212/" target="_blank"><img src="images/icon-logo-linkedin.png" alt="My LinkedIn page"></a></li>
-          <li><a href="#" target="_blank">Facebook</a></li>
+          <li><a href="#" target="_blank"><img src="images/icon-logo-instagram.png" alt="My Instagram profile"></a></li>
         </ul>
       </footer>
     </main>
