Updated thumbnails and project descriptions

--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
         <!-- Copy the whole <section> block to add more projects. -->
         <section>
           <h3>Second Life Thrift Store</h3>
-          <img src="images/thumbnail-3.jpg" alt="Thumbnail of Second Life Thrift Store branding">
-          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a class="btn" href="#" target="_blank">View project / case study</a>
+          <img src="images/Secondlife-thumbnail-500px.png" srcset="images/Secondlife-thumbnail-1000px.png" alt="Thumbnail of Second Life Thrift Store branding">
+          <p>This was a case study in which the client was Second Life Thrift Store, a pop-up shop featuring sustainable fashion. For this case study, I acted as Creative Director and was primarly responsible for the logo and branding for Second Life.</p>
+          <a class="btn" href="#" target="_blank">Case Study</a>
         </section>
 
         <section>
           <h3>Think Big Conference</h3>
           <img src="images/ThinkBigCon-Thumbnail-500px.png" srcset="images/ThinkBigCon-Thumbnail-1000px.png 2x" alt="Thumbnail of Think Big Conference branding">
-          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a class="btn" href="#" target="_blank">View project / case study</a>
+          <p>For this project, I was tasked with creating a logo, brand guide, promotional and advertising materials. The "Think Big Conference" is a dynamic gathering tailored for artistic entrepreneurs seeking to blend their creative talents with business acumen.</p>
+          <a class="btn" href="#" target="_blank">View Project</a>
         </section>
 
         <section>
           <h3>Apotherie Spa</h3>
-          <img src="images/annie-spratt-unsplash.jpg" alt="Thumbnail of Apotherie Spa branding">
-          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a class="btn" href="#" target="_blank">View project / case study</a>
+          <img src="images/apotherie-thumbnail-500px.png" srcset="images/apotherie-thumbnail-1000px.png" alt="Thumbnail of Apotherie Spa branding">
+          <p>For this project, I was tasked with the creation of the logo, branding, booklet, intake form, large format print and product packaging. The client was "Apthorie Spa & Wellness Center" that focused on modern, boho and organic imagery, practices and treatments.</p>
+          <a class="btn" href="#" target="_blank">View Project</a>
         </section>
 
         <!-- End of Project block. -->
@@ -54,20 +54,23 @@
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section>
         <h2>Work Experience</h2>
-        <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
+        <!--<p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>-->
 
         <!-- Copy this whole <section> block to add more jobs. -->
         <section>
-          <h3>Job title</h3>
-          <p>Company Name</p>
-          <p>Date at job</p>
-          <p>Job summary goes here. Add as many paragraphs as you need.</p>
-          <p>Optional list:</p>
+          <h3>Production Supervisor</h3>
+          <p>Martin Marietta Center for the Performing Arts</p>
+          <p>January 2023 - Present</p>
+          <!---Might add later. <p>Job summary goes here. Add as many paragraphs as you need.</p> -->
+          <p>Job Duties:</p>
           <ul>
-            <li>Delete this list if you don't need it.</li>
-            <li>Created...</li>
-            <li>Lead...</li>
-            <li>Responsible for...</li>
+            <li>Plan, coordinate, and oversee event logistics.</li>
+            <li>Meets with clients to determine event requirements; equipment, support staff, scheduling, production, and security needs.</li>
+            <li>Prepare and maintain records, contracts, drawings, timesheets, invoices, and related event records and documents.</li>
+            <li>Prepare cost estimates, and assist in the timely and accurate completion of billing.</li>
+            <li>Schedule all necessary staff including both internal and 3rd party staffing requirements.</li>
+            <li>Manage, schedule, and assist in the training of staff (+70 stagehands) to help grow their skills as needed.</li>
+            <li>Monitor and maintain City of Raleigh equipment, supplies, and materials inventories.</li>
           </ul>
         </section>
         <!-- End of Job block. -->
