Adding box elements

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h2>Let's Keep in Touch!</h2>
 
         <!-- Social media and contact links. Add or remove any networks. -->
-        <ul>
+        <ul class="socials">
           <li><a href="mailto:email@example.com">andrewjarmas@gmail.com</a></li>
           <li><a href="https://www.aarmasdesign.com" target="_blank">aarmasdesign.com</a></li>
           <li><a href="https://x.com/AndrewJArmas" target="_blank"><img src="images/icon-logo-x.png" alt="My X channel"></a></li>
